--- a/views/admin/item/detail_item/show_activity.ejs
+++ b/views/admin/item/detail_item/show_activity.ejs
@@ -42,7 +42,7 @@
                              <td><%= activity[i].name %></td>
                              <td><%= activity[i].type %></td>
                              <td>
-                               <img src="https://admin-staycation.herokuapp.com/<%= activity[i].imageUrl %>" alt="imageUrl" width="70px">
+                               <img src="https://admin-staycationbtm.herokuapp.com/<%= activity[i].imageUrl %>" alt="imageUrl" width="70px">
                              </td>
                              <td>
                                <form action="/admin/item/<%= itemId %>/activity/<%= activity[i].id %>?_method=DELETE" method="POST">
