--- a/views/admin/item/add_item.ejs
+++ b/views/admin/item/add_item.ejs
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                     <label for="name">Image</label>
-                    <input type="file" class="form-control" name="image" multiple required>
+                    <input type="file" class="form-control" name="image" multiple="required">
                 </div>
                 <div class="form-group">
                     <label for="name">Description</label>
